# openLedger

./: .gitignore  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  Layout.tsx  formerApp.tsx  main.tsx  routeTree.gen.ts  user-preferences.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_client_representative_table.sql  0001_initial_tables.sql  V1__initial.sql
src-tauri/src/: database.rs  lib.rs  main.rs  user_preferences.rs
src/assets/: dogSVG.tsx
src/components/: AppSidebar.tsx  Navbar.tsx  accessibilityButton.tsx  accessibilityButtonMenu.tsx  accountSelector.tsx  actionBar.tsx  appSidebar.tsx  bodyForm.tsx  breadcrumb.tsx  clientCard.tsx  diagnosticsButton.tsx  entitySelector.tsx  importFileDialog.tsx  inventoryCards.tsx  inventoryTable.tsx  inventoryTableHeaders.tsx  inventoryTablePagination.tsx  inventoryTableRows.tsx  languageButton.tsx  navbarButton.tsx  newClientDialog.tsx  newDocumentDialog.tsx  newProductDialog.tsx  salesTable.tsx  sidebarButton.tsx  sidebarItems.tsx  sidebarMenuItems.tsx  sidebarToggle.tsx  tablePagination.tsx  titlebar.tsx  titlebarBreadcrumb.tsx  topbar.tsx  windowActions.tsx  zoomButtonGroup.tsx
src/components/layout/: LowerPanel.tsx  MainSkeleton.tsx  Navbar.tsx  Sidebar.tsx  SidebarFloatingMenu.tsx  UpperPanel.tsx  UserPreferencesProvider.tsx  titlebar.tsx
src/contexts/: UserPreferencesContext.ts
src/hooks/: useCalendar.ts  useClickOutside.ts  useDebounce.ts  useKeyboardShortcut.ts
src/lib/: database.ts  errorManager.ts  webview.ts  window.ts
src/material-theme/: MuiComponentsTheme.ts  dark-hc.css  dark-mc.css  dark.css  light-hc.css  light-mc.css  light.css  newtheme.ts  theme.ts
src/media/: dogSVG.tsx
src/pages/: Dashboard.tsx  DatabaseConnection.tsx  FirstLogin.tsx
src/routes/: Dashboard.tsx  __root.tsx  index.tsx
src/schema/: newDocumentSchema.ts
src/schemas/: ARCA.ts  core.ts
src/stores/: UserPreferencesStore.ts  accountantStore.ts  tablesStore.ts  userPreferencesStore.ts
src/styles/: App.css  fonts.css
src/types/: components.ts  user-preferences.ts
src/ui-components/: accessibilityButton.tsx  accessibilityButtonMenu.tsx  breadcrumb.tsx  languageButton.tsx  ui-components.d.ts
(+38 files in other folders)
