[package]
name = "OpenLedger"
version = "0.1.0"
description = "a tauri app"
authors = ["Tomás Benchat"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_ledger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.22"
once_cell = "1.20.2"
csv = "1.3.1"
anyhow = "1.0.97"
refinery = { version = "0.8.14", features = ["rusqlite"] }
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher", "time"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[profile.release]
opt-level = 3
panic = 'abort'
# lto = true <- investigate
# strip = true <- investigate
# rustflags = ["-C", "target-cpu=x86-64-v4"] <- requires a newer or nightly version of cargo
